traversal.snake.Snake.scala.error
Compilation error:
Snake:2: error: not found: value setCouleurBrossse
  setCouleurBrossse(Color.red)
  ^Snake:17: error: not found: value getDIrection
    if (getDIrection()==Direction.est){
        ^Snake:17: error: value est is not a member of object plm.universe.Direction
    if (getDIrection()==Direction.est){
                                  ^Snake:25: error: not found: value getDIrection
    }else if (getDIrection()==Direction.ouest){
              ^Snake:25: error: value ouest is not a member of object plm.universe.Direction
    }else if (getDIrection()==Direction.ouest){
                                        ^