traversal.snake.Snake.scala.code
override def run() {
  setCouleurBrossse(Color.red)
  while (!positionFinale()){
    baisseBrosse()
    leveBrosse()
    avance()
  }
}






def positionFinale():Boolean={
  if (estFaceMur){
    if (getDIrection()==Direction.est){
      gauche()
      if (estFaceMur){
        droite()
        return true
      }else{
        return false
      }
    }else if (getDIrection()==Direction.ouest){
      droite()
      if (estFaceMur){
        gauche()
        return true
      }else{
        return false
      }
    }else{
      return false
    }
  }
  return false
}